--- a/package.json
+++ b/package.json
@@ -2,15 +2,23 @@
   "name": "teams",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 8080",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.0",
+    "bootstrap": "^5.1.3",
     "next": "12.0.2",
+    "next-auth": "^3.29.0",
+    "next-connect": "^0.11.0",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0",
+    "postcss": "^8.3.11",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "tailwindcss": "^2.2.19"
   },
   "devDependencies": {
     "eslint": "7.32.0",
