--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hapi/iron": "^6.0.0",
     "autoprefixer": "^10.4.0",
     "bootstrap": "^5.1.3",
+    "cookie": "^0.4.1",
     "next": "12.0.2",
     "next-auth": "^3.29.0",
     "next-connect": "^0.11.0",
