--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "autoprefixer": "^10.4.0",
     "bootstrap": "^5.1.3",
     "cookie": "^0.4.1",
+    "mysql2": "^2.3.3-rc.0",
     "next": "12.0.2",
     "next-auth": "^3.29.0",
     "next-connect": "^0.11.0",
@@ -20,7 +21,9 @@
     "postcss": "^8.3.11",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "tailwindcss": "^2.2.19"
+    "swr": "^1.0.1",
+    "tailwindcss": "^2.2.19",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "7.32.0",
