--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "teams",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 8080",
+    "dev": "next dev",
     "build": "SET NODE_OPTIONS=--openssl-legacy-provider && next build",
     "start": "next start",
     "lint": "next lint"
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.4.0",
     "bootstrap": "^5.1.3",
     "cookie": "^0.4.1",
+    "daisyui": "^1.16.2",
     "mysql2": "^2.3.3-rc.0",
     "next": "12.0.2",
     "next-auth": "^3.29.0",
