--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "SET NODE_OPTIONS=--openssl-legacy-provider && next build",
+    "build": " next build",
     "start": "next start",
     "lint": "next lint"
   },
